--- a/src/css/components/drawer.css
+++ b/src/css/components/drawer.css
@@ -1,8 +1,3 @@
-/*---
-title: Drawer
-section: Objects
----*/
-
 :root {
   --backgroundColor-drawer: var(--white);
   --shadow-drawer: 0 0 5px var(--color-shadow);
@@ -11,8 +6,7 @@ section: Objects
   --color-drawer-header: var(--color-page);
 }
 
-.c-drawer,
-.o-drawer {
+.c-drawer {
   background-color: var(--backgroundColor-drawer);
   bottom: 0;
   box-shadow: var(--shadow-drawer);
@@ -28,8 +22,7 @@ section: Objects
   &.is-open { left: 0; }
 }
 
-.c-drawer--right,
-.o-drawer--right {
+.c-drawer--right {
   left: no;
   right: -100%;
   transition: right var(--global-duration) ease-in-out;
@@ -38,8 +31,7 @@ section: Objects
   &.is-open { right: 0; }
 }
 
-.c-drawer__close,
-.o-drawer__close {
+.c-drawer__close {
   @apply --fade-out;
   background-color: rgba(0, 0, 0, .5);
   bottom: 0;
@@ -52,8 +44,7 @@ section: Objects
   .is-open + & { @apply --fade-in; }
 }
 
-.c-drawer__header,
-.o-drawer__header {
+.c-drawer__header {
   background-color: var(--backgroundColor-drawer-header);
   border-bottom: 1px solid var(--grey-200);
   color: var(--color-drawer-header);
@@ -61,8 +52,7 @@ section: Objects
   padding: 0 1em;
 }
 
-.c-drawer__product,
-.o-drawer__product {
+.c-drawer__product {
   color: var(--orange-900);
   display: inline-block;
   font-size: 22px;
@@ -72,13 +62,11 @@ section: Objects
   vertical-align: middle;
 }
 
-.c-drawer__group,
-.o-drawer__group {
+.c-drawer__group {
   &:not(:last-child) { border-bottom: var(--borderColor-drawer) 1px solid; }
 }
 
-.c-drawer__action,
-.o-drawer__action {
+.c-drawer__action {
   background-color: var(--white);
   color: var(--color-page);
   display: inline-block;
@@ -103,5 +91,5 @@ section: Objects
   }
 }
 
-.c-drawer__account-name,
-.o-drawer__account-name { font-size: var(--fontSize--semiMedium); }
+.c-drawer__account-name { font-size: var(--fontSize--semiMedium); }
+
