--- a/src/css/utilities/all.css
+++ b/src/css/utilities/all.css
@@ -4,15 +4,16 @@
 
 /**
  * CONTENTS
- * Forms..............Basic styles for form elements
- * Images.............Responsive styles for images
- * Layout.............Holy grail layout for flexbox
- * Typography.........Typographic styles for inline elements
- * Visualizations.....D3.js styles for graphs
+ * Grid...............A complete flexbox grid system
+ * Positioning........2D and 3D alignment patterns
+ * Shapes.............Generated shapes
+ * Typography.........Type tools
+ * Visibility.........Responsive hide and show
  */
 
 @import "alignment";
 @import "grid";
 @import "positioning";
+@import "layout";
 @import "typography";
 @import "visibility";
