--- a/src/css/utilities/layout.css
+++ b/src/css/utilities/layout.css
@@ -32,7 +32,7 @@
     transition-timing-function: cubic-bezier(.4, 0, .2, 1);
     transition-property: max-height, box-shadow;
     width: 100%;
-    z-index: 3;
+    z-index: var(--zIndex-appBar);
   }
 
   .u-layout__content {
