cleanup; Updated field.css

--- a/src/css/components/field.css
+++ b/src/css/components/field.css
@@ -177,6 +177,7 @@ section: Components
     border-radius: 2px;
     border-bottom: none;
     height: 36px;
+    padding-right: 20px;
     transition: background-color .1s ease-in-out;
 
     &:hover {
